SSCSCI-1765: populate hearingIdMap and caseList in one loop